# pyscaffoldext-jaustinpage

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.cfg  whitelist.txt
.github/workflows/: python-nox.yml  python-tox.yml
docs/: conf.py  index.md  readme.md
docs/api/: modules.rst  pyscaffoldext.jaustinpage.rst  pyscaffoldext.jaustinpage.templates.rst  pyscaffoldext.rst
scripts/: sort_file.py  template_preformat.py
src/pyscaffoldext/jaustinpage/: __init__.py  extension.py  version.py
src/pyscaffoldext/jaustinpage/templates/: AUTHORS.md.template  README.md.template  __init__.py  __init__.py.template  all.run.xml.template  conftest.py.template  hgignore.template  index.md.template  make.run.xml.template  misc.xml.template  noxfile.py.template  pytest debug.run.xml.template  skeleton.py.template  test_skeleton.py.template  tox.ini.template  tox.run.xml.template  whitelist.txt.template
tests/: __init__.py  conftest.py  helpers.py  test_custom_extension.py
