[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
write_to = "src/pyscaffoldext/jaustinpage/version.py"

[tool.black]
line-length = 88
extend-exclude = """
^/src/pyscaffoldext/jaustinpage/version.py
"""

[tool.isort]
profile = "black"
known_first_party = "pyscaffoldext,myproject"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--cov-report=term-missing",
  "--cov-fail-under=100",
  "--verbose",
]
norecursedirs = [
  "dist",
  "build",
  ".tox",
]

[tool.coverage.run]
branch = true
source = ["pyscaffoldext.jaustinpage"]

[tool.coverage.paths]
source = [
  "src/",
  "*/site-packages/"
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]

[tool.flakeheaven]
exclude = ["README.md", ".nox", "build", "dist", "src/pyscaffoldext/jaustinpage/version.py"]
max_line_length = 88
show_source = true
extended_default_ignore=[]
docstring_style = "sphinx"
max-complexity = 8
max-annotations-complexity = 4
max-expression-complexity = 7
format = "grouped"

[tool.flakeheaven.plugins]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
flake8 = ["+*", "-E203", "-W503"]
# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]
flake8-annotations = ["+*", "-ANN101"]
flake8-darglint = ["+*"]
flake8-isort = ["-*"]

[tool.flakeheaven.exceptions."__init__.py"]
flake8-requirements = ["+*", "-I900"]

[tool.flakeheaven.exceptions."tests/"]
flake8 = ["+*", "-E501"]
flake8-absolute-import = ["+*", "-ABS101"]
flake8-annotations = ["-*"]
flake8-annotations-complexity = ["-*"]
flake8-bandit = ["+*", "-S101"]
flake8-darglint = ["-*"]
flake8-docstrings = ["+*", "-D103"]
flake8-requirements = ["-*"]
