# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyscaffoldext-jaustinpage
description = Standard python library packaging for Austin Page
author = Austin Page
author_email = jaustinpage@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/jaustinpage
# Add here related links, for example:
project_urls =
    Source = https://github.com/jaustinpage

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    License :: OSI Approved :: MIT License

version = attr: pyscaffoldext-jaustinpage.__version__

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.6

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    pyscaffold>=4.0,<5.0a0
    pyscaffoldext-markdown
    toml

[options.package_data]
pyscaffoldext.jaustinpage.templates = *.template

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pyscaffoldext-jaustinpage[PDF]` like:
# PDF = ReportLab; RXP

dev =
    tox

docs =
    pyscaffold
    recommonmark
    rinohtype
    setuptools_scm
    sphinx>=3.2.1
    toml

testing =
    pre-commit
    setuptools_scm
    virtualenv
    configupdater
    tox
    pytest
    pytest-cov
    coverage[toml]

[options.entry_points]
pyscaffold.cli =
    jaustinpage = pyscaffoldext.jaustinpage.extension:Jaustinpage

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503, ANN101
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    version.py
docstring_style = sphinx
max-complexity = 8
max-annotations-complexity = 4
max-expression-complexity = 7
known-modules = pyscaffoldext-jaustinpage:[pyscaffoldext,pyscaffoldext.jaustinpage]

[coverage.run]
branch = true
source = pyscaffoldext.jaustinpage
parallel = true
[coverage.paths]
source =
    src/
    */site-packages/
[coverage.report]
skip_covered = True
show_missing = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.2
package = jaustinpage
extensions =
    cirrus
    custom_extension
    markdown
    namespace
    no_skeleton
    pre_commit
namespace = pyscaffoldext
